--- a/package.json
+++ b/package.json
@@ -15,8 +15,18 @@
   },
   "dependencies": {
     "gatsby": "^2.18.12",
+    "gatsby-image": "^2.2.37",
+    "gatsby-plugin-manifest": "^2.2.33",
+    "gatsby-plugin-offline": "^3.0.29",
+    "gatsby-plugin-react-helmet": "^3.1.18",
+    "gatsby-plugin-sharp": "^2.3.9",
+    "gatsby-remark-images": "^3.1.38",
+    "gatsby-source-filesystem": "^2.1.42",
+    "gatsby-transformer-remark": "^2.6.44",
+    "gatsby-transformer-sharp": "^2.3.9",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-helmet": "^5.2.1"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
