--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "gatsby-plugin-offline": "^3.0.29",
     "gatsby-plugin-react-helmet": "^3.1.18",
     "gatsby-plugin-sharp": "^2.3.9",
+    "gatsby-remark-autolink-headers": "^2.2.1",
+    "gatsby-remark-copy-linked-files": "^2.2.1",
     "gatsby-remark-embed-soundcloud": "^1.0.0",
     "gatsby-remark-embed-video": "^2.0.1",
     "gatsby-remark-images": "^3.1.38",
     "gatsby-remark-responsive-iframe": "^2.2.30",
+    "gatsby-remark-table-of-contents": "0.0.9",
     "gatsby-source-filesystem": "^2.1.42",
     "gatsby-transformer-remark": "^2.6.44",
     "gatsby-transformer-sharp": "^2.3.9",
@@ -34,7 +37,8 @@
     "react-helmet": "^5.2.1",
     "react-resizable": "^1.10.1",
     "react-resize-panel": "^0.2.24",
-    "react-rnd": "^10.1.3"
+    "react-rnd": "^10.1.3",
+    "rehype-react": "^4.0.1"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
