--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gatsby-transformer-sharp": "^2.3.9",
     "re-resizable": "^6.1.1",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.12.0",
     "react-grid-layout": "^0.17.1",
     "react-helmet": "^5.2.1",
