--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-resizable": "^1.10.1",
     "react-resize-panel": "^0.2.24",
     "react-rnd": "^10.1.3",
+    "react-router-dom": "^5.2.0",
     "rehype-react": "^4.0.1"
   },
   "devDependencies": {
