--- a/package.json
+++ b/package.json
@@ -14,34 +14,29 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "gatsby": "^2.18.12",
-    "gatsby-dynamic-image": "^0.2.0",
-    "gatsby-image": "^2.2.37",
-    "gatsby-plugin-manifest": "^2.2.33",
-    "gatsby-plugin-offline": "^3.0.29",
-    "gatsby-plugin-react-helmet": "^3.1.18",
-    "gatsby-plugin-sharp": "^2.3.9",
-    "gatsby-remark-autolink-headers": "^2.2.1",
-    "gatsby-remark-copy-linked-files": "^2.2.1",
+    "gatsby": "^5.2.0",
+    "gatsby-plugin-image": "^3.2.0",
+    "gatsby-plugin-manifest": "^5.2.0",
+    "gatsby-plugin-offline": "^6.2.0",
+    "gatsby-plugin-react-helmet": "^6.2.0",
+    "gatsby-plugin-sharp": "^5.2.0",
+    "gatsby-remark-autolink-headers": "^6.2.0",
+    "gatsby-remark-copy-linked-files": "^6.2.0",
     "gatsby-remark-embed-soundcloud": "^1.0.0",
-    "gatsby-remark-embed-video": "^2.0.1",
-    "gatsby-remark-images": "^3.1.38",
-    "gatsby-remark-responsive-iframe": "^2.2.30",
-    "gatsby-remark-table-of-contents": "0.0.9",
-    "gatsby-source-filesystem": "^2.1.42",
-    "gatsby-transformer-remark": "^2.6.44",
-    "gatsby-transformer-sharp": "^2.3.9",
-    "re-resizable": "^6.1.1",
-    "react": "^16.12.0",
-    "react-bootstrap": "^1.0.1",
-    "react-dom": "^16.12.0",
-    "react-grid-layout": "^0.17.1",
-    "react-helmet": "^5.2.1",
-    "react-resizable": "^1.10.1",
-    "react-resize-panel": "^0.2.24",
-    "react-rnd": "^10.1.3",
-    "react-router-dom": "^5.2.0",
-    "rehype-react": "^4.0.1"
+    "gatsby-remark-embed-video": "^3.2.1",
+    "gatsby-remark-images": "^7.2.0",
+    "gatsby-remark-responsive-iframe": "^6.2.0",
+    "gatsby-remark-table-of-contents": "^2.0.0",
+    "gatsby-source-filesystem": "^5.2.0",
+    "gatsby-transformer-remark": "^6.2.0",
+    "gatsby-transformer-sharp": "^5.2.0",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.6.0",
+    "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-router-dom": "^6.4.4",
+    "rehype-react": "^7.1.2",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
